--- a/app/src/main/res/layout/admin_fragment_notification_create.xml
+++ b/app/src/main/res/layout/admin_fragment_notification_create.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/admin_notification_create_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/Theme.Admin"
@@ -45,16 +46,24 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/notificationTitleLabel" />
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/notificationInputTitleError"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/notificationTitleText" />
+
         <TextView
             android:id="@+id/textView11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="70dp"
             android:text="@string/notificationDescription"
             android:textSize="@dimen/smallTitle"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/notificationTitleText" />
+            app:layout_constraintTop_toBottomOf="@+id/notificationInputTitleError" />
 
         <EditText
             android:id="@+id/notificationDetails"
@@ -68,11 +77,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/notificationInputDescriptionError"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/notificationDetails" />
+
         <Button
             android:id="@+id/adminAddNotificationBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="100dp"
             android:text="Add"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
