--- a/app/src/main/res/layout/admin_fragment_notification_view.xml
+++ b/app/src/main/res/layout/admin_fragment_notification_view.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/admin_notificationView_frame"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:theme="@style/Theme.Admin"
@@ -45,7 +46,7 @@
             android:id="@+id/adminNotificationRecycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="65dp"
             android:layout_marginBottom="80dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
