--- a/app/src/main/res/layout/admin_fragment_activity.xml
+++ b/app/src/main/res/layout/admin_fragment_activity.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".AdminFragment.AdminActivityFragment"
     android:id="@+id/layoutAdminActivity">
 
@@ -23,13 +23,18 @@
     <!-- SearchView -->
 
     <!-- Create Button -->
-    <androidx.appcompat.widget.SearchView
+    <android.widget.SearchView
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top|start"
         android:iconifiedByDefault="false"
-        android:queryHint="Search activities" />
+        android:queryHint="Search activities"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+
 
     <Button
         android:id="@+id/createActivity"
