--- a/app/src/main/res/layout/user_activity_update_activity.xml
+++ b/app/src/main/res/layout/user_activity_update_activity.xml
@@ -6,30 +6,64 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <ImageButton
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@android:drawable/ic_media_previous"
         tools:ignore="MissingConstraints" />
-
+    <!-- Title -->
     <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="AdminCreateActivity"
-        android:layout_centerInParent="true"
-        tools:ignore="MissingConstraints" />
+        android:text="UserUpdateActivity"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- User ID -->
+    <TextView
+        android:id="@+id/userIdTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="UserUpdateActivity"
+        app:layout_constraintTop_toBottomOf="@+id/text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Activity ID -->
+    <TextView
+        android:id="@+id/activityIdTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="UserUpdateActivity"
+        app:layout_constraintTop_toBottomOf="@+id/userIdTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Status -->
+    <TextView
+        android:id="@+id/statusTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="UserUpdateActivity"
+        app:layout_constraintTop_toBottomOf="@+id/activityIdTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Name EditText -->
     <EditText
         android:id="@+id/name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Enter name here"
-        app:layout_constraintTop_toBottomOf="@+id/text"
+        app:layout_constraintTop_toBottomOf="@+id/statusTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Description EditText -->
     <EditText
         android:id="@+id/description"
         android:layout_width="0dp"
@@ -39,26 +73,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <Button
-        android:id="@+id/imageButton"
-        android:layout_width="160dp"
-        android:layout_height="122dp"
-        app:layout_constraintTop_toBottomOf="@+id/description"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-
-        />
-
-
+    <!-- ImageView -->
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="160dp"
         android:layout_height="122dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
+    <!-- Total Required EditText -->
     <EditText
         android:id="@+id/totalRequire"
         android:layout_width="0dp"
@@ -68,20 +93,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="0dp"
-        android:layout_height="300dp"
+    <!-- Total Receive -->
+    <TextView
+        android:id="@+id/totalReceive"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="UserUpdateActivity"
         app:layout_constraintTop_toBottomOf="@+id/totalRequire"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- CalendarView -->
+    <CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="0dp"
+        android:layout_height="300dp"
+        app:layout_constraintTop_toBottomOf="@+id/totalReceive"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Send Button -->
     <Button
-        android:id="@+id/btn"
+        android:id="@+id/updatebtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Send"
         app:layout_constraintTop_toBottomOf="@+id/calendarView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
