--- a/app/src/main/res/layout/admin_fragment_notification_view.xml
+++ b/app/src/main/res/layout/admin_fragment_notification_view.xml
@@ -22,6 +22,17 @@
             app:layout_constraintStart_toEndOf="@+id/admin_notification_view_backButton"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <SearchView
+            android:id="@+id/admin_notificationView_searchView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="15dp"
+            android:iconifiedByDefault="false"
+            android:queryHint="Search Notifications"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
         <ImageView
             android:id="@+id/admin_notification_view_backButton"
             android:layout_width="wrap_content"
@@ -46,7 +57,7 @@
             android:id="@+id/adminNotificationRecycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="65dp"
+            android:layout_marginTop="110dp"
             android:layout_marginBottom="80dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
