--- a/app/src/main/res/layout/user_fragment_activity.xml
+++ b/app/src/main/res/layout/user_fragment_activity.xml
@@ -3,60 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".UserFragment.UserActivityFragment"
-    android:id="@+id/layoutUserActivity">
+    tools:context=".UserFragment.UserActivityFragment">
 
-    <!-- Title -->
+    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:id="@+id/text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="User Activity"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:layout_gravity="top"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp" />
-
-    <!-- SearchView -->
-
-    <!-- Create Button -->
-    <android.widget.SearchView
-        android:id="@+id/searchView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|start"
-        android:iconifiedByDefault="false"
-        android:queryHint="Search activities"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-
-
-    <Button
-        android:id="@+id/createActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|end"
-        android:text="Create"
-        android:paddingStart="32dp"
-        android:paddingEnd="32dp"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="#FFFFFF"
-        android:elevation="4dp" />
-
-    <!-- RecyclerView -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/activityList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="fill"
-        android:layout_marginTop="72dp" />
+        android:text="UserActicity" />
 
 </FrameLayout>
