--- a/app/src/main/res/layout/admin_fragment_activity.xml
+++ b/app/src/main/res/layout/admin_fragment_activity.xml
@@ -1,15 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:theme="@style/Theme.Admin"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+tools:context=".AdminFragment.AdminActivityFragment"
+android:id="@+id/layoutAdminActivity">
+
+<!-- Title -->
+<TextView
+    android:id="@+id/text"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Admin Activity"
+    android:textSize="24sp"
+    android:textStyle="bold"
+    android:gravity="center"
+    android:layout_gravity="top"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp" />
+
+<!-- SearchView -->
+
+<!-- Create Button -->
+<android.widget.SearchView
+    android:id="@+id/searchView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="top|start"
+    android:iconifiedByDefault="false"
+    android:queryHint="Search activities"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    />
+
+
+
+<Button
+    android:id="@+id/createActivity"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="top|end"
+    android:text="Create"
+    android:paddingStart="32dp"
+    android:paddingEnd="32dp"
+    android:paddingTop="12dp"
+    android:paddingBottom="12dp"
+    android:textSize="18sp"
+    android:textStyle="bold"
+    android:textColor="#FFFFFF"
+    android:elevation="4dp" />
+
+<!-- RecyclerView -->
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/activityList"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/Theme.Admin"
-    tools:context=".AdminFragment.AdminActivityFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="AdminActivity" />
+    android:layout_gravity="fill"
+    android:layout_marginTop="72dp" />
 
 </FrameLayout>
