--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="buttonRadius">16dp</dimen>
     <dimen name="titleTextSize">25sp</dimen>
     <dimen name="smallTitle">20sp</dimen>
+    <dimen name="errorMessage">10dp</dimen>
 </resources>
