--- a/app/src/main/res/layout/user_fragment_home_activity_view.xml
+++ b/app/src/main/res/layout/user_fragment_home_activity_view.xml
@@ -38,6 +38,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="15dp"
             android:text="Creator"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/userActivityDonateNameText" />
 
