--- a/app/src/main/res/layout/admin_activity_update_activity.xml
+++ b/app/src/main/res/layout/admin_activity_update_activity.xml
@@ -20,6 +20,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="AdminUpdateActivity"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -44,15 +46,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Status -->
-    <TextView
-        android:id="@+id/statusTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="AdminUpdateActivity"
-        app:layout_constraintTop_toBottomOf="@+id/activityIdTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Name EditText -->
     <EditText
@@ -60,7 +53,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Enter name here"
-        app:layout_constraintTop_toBottomOf="@+id/statusTextView"
+        app:layout_constraintTop_toBottomOf="@+id/activityIdTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -75,14 +68,26 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- ImageView -->
-    <ImageView
-        android:id="@+id/imageView"
+    <Button
+        android:id="@+id/imageButton"
         android:layout_width="160dp"
         android:layout_height="122dp"
         app:layout_constraintTop_toBottomOf="@+id/description"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+
+        />
+
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="160dp"
+        android:layout_height="122dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description"
         app:srcCompat="@android:drawable/ic_menu_add" />
+
 
     <!-- Total Required EditText -->
     <EditText
