--- a/app/src/main/res/layout/user_activity_update_activity.xml
+++ b/app/src/main/res/layout/user_activity_update_activity.xml
@@ -75,14 +75,26 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- ImageView -->
-    <ImageView
-        android:id="@+id/imageView"
+    <Button
+        android:id="@+id/imageButton"
         android:layout_width="160dp"
         android:layout_height="122dp"
         app:layout_constraintTop_toBottomOf="@+id/description"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+
+        />
+
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="160dp"
+        android:layout_height="122dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description"
         app:srcCompat="@android:drawable/ic_menu_add" />
+
 
     <!-- Total Required EditText -->
     <EditText
