--- a/app/src/main/res/layout/admin_fragment_home.xml
+++ b/app/src/main/res/layout/admin_fragment_home.xml
@@ -34,6 +34,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:listitem="@layout/layout_activity_list_user" />
+
+        <TextView
+            android:id="@+id/adminActivityControlView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:text="@string/noActivityMessage"
+            android:textSize="@dimen/smallTitle"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
