--- a/app/src/main/res/layout/user_fragment_edit_profile.xml
+++ b/app/src/main/res/layout/user_fragment_edit_profile.xml
@@ -2,9 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:theme="@style/Theme.User"
     tools:context=".UserEditProfileFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -29,13 +30,12 @@
             android:id="@+id/imageView"
             android:layout_width="56dp"
             android:layout_height="63dp"
+            android:layout_marginTop="125dp"
             android:src="@drawable/icon_add_photo"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.184" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/usernameTxt"
@@ -52,13 +52,12 @@
         <EditText
             android:id="@+id/userName"
             android:layout_width="167dp"
-            android:layout_height="24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="37dp"
+            android:layout_marginTop="40dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.59"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.333" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <TextView
             android:id="@+id/emailTxt"
@@ -76,12 +75,13 @@
             android:id="@+id/userEmailAdd"
             android:layout_width="171dp"
             android:layout_height="24dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.6"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/userName"
-            app:layout_constraintVertical_bias="0.044" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/contactTxt"
@@ -99,15 +99,15 @@
             android:id="@+id/userContact"
             android:layout_width="171dp"
             android:layout_height="42dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="1dp"
             android:ems="10"
             android:inputType="phone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.6"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.436" />
+            app:layout_constraintTop_toBottomOf="@+id/userEmailAdd"
+            app:layout_constraintVertical_bias="0.046" />
 
         <TextView
             android:id="@+id/genderText"
@@ -125,25 +125,27 @@
             android:id="@+id/userGender"
             android:layout_width="171dp"
             android:layout_height="36dp"
+            android:layout_marginTop="10dp"
             android:ems="10"
             android:inputType="text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.6"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.541" />
+            app:layout_constraintTop_toBottomOf="@+id/userContact"
+            app:layout_constraintVertical_bias="0.036" />
 
         <TextView
             android:id="@+id/userPasswordHide"
             android:layout_width="164dp"
             android:layout_height="21dp"
+            android:layout_marginTop="21dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.595"
+            app:layout_constraintHorizontal_bias="0.582"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.609" />
+            app:layout_constraintTop_toBottomOf="@+id/userGender"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/passwordTxt"
@@ -157,17 +159,17 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.608" />
 
-        <Button
-            android:id="@+id/changePasswordButton"
+        <TextView
+            android:id="@+id/changePasswordPage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Change"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.92"
+            app:layout_constraintHorizontal_bias="0.9"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.61" />
+            app:layout_constraintVertical_bias="0.629" />
 
         <Button
             android:id="@+id/saveButton"
