--- a/app/src/main/res/layout/user_activity_login.xml
+++ b/app/src/main/res/layout/user_activity_login.xml
@@ -17,8 +17,8 @@
 
     <Button
         android:id="@+id/userLoginButton2"
-        android:layout_width="329dp"
-        android:layout_height="51dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
