--- a/app/src/main/res/layout/admin_fragment_notification_create.xml
+++ b/app/src/main/res/layout/admin_fragment_notification_create.xml
@@ -67,13 +67,15 @@
 
         <EditText
             android:id="@+id/notificationDetails"
-            android:layout_width="376dp"
+            android:layout_width="0dp"
             android:layout_height="49dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
             android:ems="10"
             android:hint="Enter notification details"
             android:inputType="text"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
@@ -81,7 +83,8 @@
             android:id="@+id/notificationInputDescriptionError"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="3dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/notificationDetails" />
 
