--- a/app/src/main/res/layout/layout_activity_list_user.xml
+++ b/app/src/main/res/layout/layout_activity_list_user.xml
@@ -33,8 +33,8 @@
 
         <TextView
             android:id="@+id/userListActivityNameView"
-            android:layout_width="66dp"
-            android:layout_height="18dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="15dp"
             android:text="Activity Name"
